--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="">
     <title>Distribuidora Rico</title>
+    <meta name="description"
+        content="Comercializadora y distribuidora Rico Spa ofrece una gran variedad de jugos concentrados y vinagres para acompañar 
+        y dar sabor a tu mesa">
+    <meta name="keywords" content="Rico, distribuidora, sucedáneos, vinagres, concetrados, jugos, nectar, venta por mayor">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
