--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="">
-    <title>Distribuidora Rico</title>
-    <meta name="description"
-        content="Comercializadora y distribuidora Rico Spa ofrece una gran variedad de jugos concentrados y vinagres para acompañar 
+    <title>Rico</title>
+    <meta name="description" content="Comercializadora y distribuidora Rico Spa ofrece una gran variedad de jugos concentrados y vinagres para acompañar 
         y dar sabor a tu mesa">
-    <meta name="keywords" content="Rico, distribuidora, sucedáneos, vinagres, concetrados, jugos, nectar, venta por mayor">
+    <meta name="keywords"
+        content="Rico, distribuidora, sucedáneos, vinagres, concetrados, jugos, nectar, venta por mayor">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -76,10 +76,10 @@
                 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner carousel">
                         <div class="carousel-item active" data-bs-interval="5000">
-                            <img src="./images/portada5.jpg" class="d-block w-100" alt="portada uno">
+                            <img src="./images/portada_pri.jpeg" class="d-block w-100" alt="portada uno">
                         </div>
                         <div class="carousel-item" data-bs-interval="5000">
-                            <img src="./images/portada7.jpg" class="d-block w-100" alt="portada dos">
+                            <img src="./images/portada_sec.jpeg" class="d-block w-100" alt="portada dos">
                         </div>
                         <!-- <div class="carousel-item">
                             <img src="./images/portada6.jpg" class="d-block w-100" alt="portada tres">
@@ -97,8 +97,8 @@
                     </button>
                 </div>
             </div>
-            <div>
-                <h1 class="display-4 text-center mb-4 mt-4">Destacados</h1>
+            <div class="display-4 text-center mb-4 mt-4">
+                <h1>Productos Destacados</h1>
             </div>
             <section id="prodDestacados">
                 <div class="row">
@@ -149,18 +149,18 @@
         <footer class="row">
             <div class="container custom-footer">
                 <div class="row custom-footer">
-                    <div class="col-md-3 col-sm-6 custom-responsive">
+                    <div class="col-md-3 col-sm-6 custom-responsive justify-content-center">
                         <div class="logo2 d-flex justify-content-center align-items-center">
                             <a href="#">
-                                <img class="logo w-100" src="./images/logo.png" alt="Logo Rico">
+                                <img class="logo w-100 max-img-width" src="./images/logo.png" alt="Logo Rico">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 custom-responsive">
                         <div class="footerHorarios">
                             <div class="d-flex align-items-center">
-                                <a class="schedule-icon"><i class="fas fa-clock m-2 custom-icon-color"></i></a>
-                                <h3 class="customFo">Horarios</h3>
+                                <a class="schedule-icon"><i class="fas fa-clock custom-icon-color"></i></a>
+                                <h3 class="customFo ms-2">Horarios</h3>
                             </div>
                             <p class="mb-0">Lunes a viernes 8 a 18 hrs</p>
                             <p class="mb-0">Sábados 8 a 14 hrs</p>
@@ -172,8 +172,8 @@
                             <div class="d-flex align-items-center">
                                 <a href="https://www.google.com/maps/d/embed?mid=1AM8vy-HL-qy8hh73kJYlCcEmCaw&ehbc=2E312F"
                                     target="_blank" class="address-icon"><i
-                                        class="fas fa-map-marker-alt m-2 custom-icon-color"></i></a>
-                                <h3 class="customFo">Dirección</h3>
+                                        class="fas fa-map-marker-alt custom-icon-color"></i></a>
+                                <h3 class="customFo ms-2 font-weight-bold">Dirección</h3>
                             </div>
                             <p class="mb-0">Avenida pepito 999</p>
                             <p class="mb-0">San Joaquin</p>
@@ -184,8 +184,8 @@
                     <div class="col-md-3 col-sm-6 custom-responsive">
                         <div class="footerContacto">
                             <div class="d-flex align-items-center">
-                                <a class="phone-icon"><i class="fas fa-phone m-2 custom-icon-color"></i></a>
-                                <h3 class="customFo">Contáctanos</h3>
+                                <a class="phone-icon"><i class="fas fa-phone custom-icon-color"></i></a>
+                                <h3 class="customFo ms-2">Contáctanos</h3>
                             </div>
                             <p class="mb-0">+569 9 7420090</p>
                             <p class="mb-0">+569 7 5120240</p>
