--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="">
-    <title>Rico</title>
+    <title>Distribuidora Rico</title>
     <meta name="description" content="Comercializadora y distribuidora Rico Spa ofrece una gran variedad de jugos concentrados y vinagres para acompañar 
         y dar sabor a tu mesa">
     <meta name="keywords"
@@ -38,7 +38,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Inicio</a>
+                                    <a class="nav-link" href="./index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./pages/productos.html">Productos</a>
@@ -144,6 +144,27 @@
                     </div>
                 </div>
             </section>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Suscríbete</h5>
+                                <form>
+                                    <div class="form-group">
+                                        <label for="email">Correo electrónico</label>
+                                        <div class="d-flex">
+                                            <input type="email" class="form-control" id="email"
+                                                placeholder="Ingresa tu correo electrónico">
+                                            <button type="submit" class="btn btn-primary">Suscribirse</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
         <div class="divider"></div>
         <footer class="row">
@@ -198,7 +219,7 @@
             <div class="container">
                 <div class="row mt-0">
                     <div class="col-12 text-center">
-                        <div class="accordion" id="accordionFooter">
+                        <div class="accordion" id="accordionFooter">              
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingHorarios">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
