--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -23,7 +23,7 @@
             <div class="col d-flex w-100">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light custom w-100">
                     <div class="container-fluid w-100 custom">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="../index.html">
                             <img class="logo" src="../images/logo.png" alt="Logo Rico">
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -34,7 +34,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../index.html">Inicio</a>
+                                    <a class="nav-link" href="../index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="../pages/productos.html">Productos</a>
@@ -57,7 +57,7 @@
                                         <a href="#" class="nav-link cart-icon"><i class="fas fa-shopping-cart"></i></a>
                                     </li>-->
                                 <li class="nav-item ml-auto">
-                                    <div><a class="nav-link" href="./pages/ingresa.html">Ingresa</a></div>
+                                    <div><a class="nav-link" href="../pages/ingresa.html">Ingresa</a></div>
                                 </li>
                             </ul>
                             <!-- </div>-->
@@ -131,18 +131,18 @@
         <footer class="row">
             <div class="container custom-footer">
                 <div class="row custom-footer">
-                    <div class="col-md-3 col-sm-6 custom-responsive">
+                    <div class="col-md-3 col-sm-6 custom-responsive justify-content-center">
                         <div class="logo2 d-flex justify-content-center align-items-center">
                             <a href="#">
-                                <img class="logo w-100" src="../images/logo.png" alt="Logo Rico">
+                                <img class="logo w-100 max-img-width" src="../images/logo.png" alt="Logo Rico">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 custom-responsive">
                         <div class="footerHorarios">
                             <div class="d-flex align-items-center">
-                                <a class="schedule-icon"><i class="fas fa-clock m-2 custom-icon-color"></i></a>
-                                <h3 class="customFo">Horarios</h3>
+                                <a class="schedule-icon"><i class="fas fa-clock custom-icon-color"></i></a>
+                                <h3 class="customFo ms-2">Horarios</h3>
                             </div>
                             <p class="mb-0">Lunes a viernes 8 a 18 hrs</p>
                             <p class="mb-0">Sábados 8 a 14 hrs</p>
@@ -154,8 +154,8 @@
                             <div class="d-flex align-items-center">
                                 <a href="https://www.google.com/maps/d/embed?mid=1AM8vy-HL-qy8hh73kJYlCcEmCaw&ehbc=2E312F"
                                     target="_blank" class="address-icon"><i
-                                        class="fas fa-map-marker-alt m-2 custom-icon-color"></i></a>
-                                <h3 class="customFo">Dirección</h3>
+                                        class="fas fa-map-marker-alt custom-icon-color"></i></a>
+                                <h3 class="customFo ms-2 font-weight-bold">Dirección</h3>
                             </div>
                             <p class="mb-0">Avenida pepito 999</p>
                             <p class="mb-0">San Joaquin</p>
@@ -166,8 +166,8 @@
                     <div class="col-md-3 col-sm-6 custom-responsive">
                         <div class="footerContacto">
                             <div class="d-flex align-items-center">
-                                <a class="phone-icon"><i class="fas fa-phone m-2 custom-icon-color"></i></a>
-                                <h3 class="customFo">Contáctanos</h3>
+                                <a class="phone-icon"><i class="fas fa-phone custom-icon-color"></i></a>
+                                <h3 class="customFo ms-2">Contáctanos</h3>
                             </div>
                             <p class="mb-0">+569 9 7420090</p>
                             <p class="mb-0">+569 7 5120240</p>
