--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Distribuidora Rico</title>
     <meta name="description" content="Comercializadora y distribuidora Rico Spa ofrece una gran variedad de jugos concentrados y vinagres para acompañar 
         y dar sabor a tu mesa">
     <meta name="keywords"
         content="Rico, distribuidora, sucedáneos, vinagres, concetrados, jugos, nectar, venta por mayor">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
@@ -144,24 +144,19 @@
                     </div>
                 </div>
             </section>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-md-6">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Suscríbete</h5>
-                                <form>
-                                    <div class="form-group">
-                                        <label for="email">Correo electrónico</label>
-                                        <div class="d-flex">
-                                            <input type="email" class="form-control" id="email"
-                                                placeholder="Ingresa tu correo electrónico">
-                                            <button type="submit" class="btn btn-primary">Suscribirse</button>
-                                        </div>
-                                    </div>
-                                </form>
+            <div class="container subscription-container-wrapper animate__animated animate__fadeInLeft">
+                <div class="position-relative">
+                    <img src="./images/suscription1.jpg" alt="suscripcion"
+                        class="img-fluid w-100 subscription-container-wrapper">
+                    <div class="position-absolute top-50 start-50 translate-middle subscription-container">
+                        <h2>¡Suscríbete para recibir actualizaciones!</h2>
+                        <form>
+                            <div class="form-group">
+                                <input type="email" class="form-control" placeholder="Ingresa tu correo electrónico"
+                                    required>
                             </div>
-                        </div>
+                            <button type="submit" class="btn btn-primary">Suscribirse</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -219,7 +214,7 @@
             <div class="container">
                 <div class="row mt-0">
                     <div class="col-12 text-center">
-                        <div class="accordion" id="accordionFooter">              
+                        <div class="accordion" id="accordionFooter">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingHorarios">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -287,7 +282,6 @@
                     </div>
                 </div>
             </div>
-
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
