--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -70,8 +70,8 @@
             </div>
         </header>
         <main class="row mb-4">
-            <div class="container">
-                <h3 class="text-left mb-4 mt-4">Contacto</h3>
+            <div class="container mt-4">
+                <h2 class="text-left mb-4">Contacto</h2>
                 <div class="row">
                     <div class="col-md-6 col-sm-6">
                         <div class="prod text-center">
