--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -70,29 +70,22 @@
             </div>
         </header>
         <main class="row mb-4">
-            <div class="card mb-3 mt-4">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="../images/quienes-somos.jpg" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h2 class="card-title">Mision</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, quos
-                                expedita dicta laborum eligendi cum incidunt suscipit. Voluptate cumque similique
-                                accusantium hic temporibus iusto recusandae ipsum dolorem dolor, ea libero!.</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="mb-4 mt-4">
+                <img class="img-fluid w-100" src="../images/mision.jpeg" alt="mision">
             </div>
             <div>
-                <h3 class="text-left mb-4 mt-4">Nuestra historia</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi impedit dignissimos quibusdam,
-                    voluptatem quaerat quae voluptates necessitatibus corrupti animi tempora error, placeat id voluptas
-                    magni. Molestias explicabo voluptate in suscipit!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi impedit dignissimos quibusdam,
-                    voluptatem quaerat quae voluptates necessitatibus corrupti animi tempora error, placeat id voluptas
-                    magni. Molestias explicabo voluptate in suscipit!</p>
+                <h2 class="text-left mb-4 mt-4">Nuestra historia</h2>
+                <p>Es una empresa familiar que nace el año 2008 con el objetivo de cambiar de rubro, de las carnicerías
+                    hacia la elaboración de un producto que tuviera mejor margen de contribución, ya que en las carnes
+                    había mucha competencia. Es así como después de tener contacto con una persona que hacia la Maquila
+                    del Jugo de Limon Sucedáneo, logramos con la ayuda de un Ingeniero en Alimentos desarrollar un
+                    producto de alta calidad. <br><br>
+                    Una vez que nos establecimos en el mercado, comenzamos a envasar vinagres de vino, procedentes de
+                    Villa Alegre. Teníamos un proveedor de materia prima que nos dio le idea de elaborar Jugos
+                    Concentrados Libres de Azúcar, solamente con Edulcorantes, comenzamos con sabores básicos (Piña,
+                    Naranja, Frutilla m, Frambuesa, Durazno y Damasco, posteriormente desarrollamos 9 sabores más, que
+                    son los que se venden hasta ahora (Mango, Maracuya, Melón, Piña Colada, Manzana, Arándano,
+                    Naranja-Plátano, Huesillo y Chirimoya).</p>
             </div>
             <section class="container mt-4">
                 <div class="row d-flex">
