--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 </div>
             </div>
         </main>
-        <div class="divider"></div>
+        <div class="divider"></div><!--esto es una prueba-->>
         <footer class="row">
             <div class="container custom-footer">
                 <div class="row custom-footer">
